--- a/src/blog/first-orgfile.org
+++ b/src/blog/first-orgfile.org
@@ -14,6 +14,18 @@
 #+XSLT:
 
 * First main point
+
+#+BEGIN_HTML
+
+<strong>This is straight html!</strong>
+
+  <ul>
+  <li>one</li>
+  <li>two</li>
+  <li>three</li>
+  </ul>  
+
+#+END_HTML
   
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
   eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
