--- a/src/blog/unix-tools-to-create-tools.org
+++ b/src/blog/unix-tools-to-create-tools.org
@@ -1,4 +1,4 @@
-#+TITLE:     Unix: Tools for creating Tools
+#+TITLE:     Unix: Tools for Creating Tools
 #+EMAIL:     thomas@kjeldahlnilsson.net
 #+DATE:      28.12.2012
 #+DESCRIPTION:
@@ -15,13 +15,15 @@
 
 #+BEGIN_HTML
 <style>
-#content {
-max-width: 700px;
-}
 
 .src {
 color: white;
 background-color: black;
+border: 1pt solid #AEBDCC;
+padding: 5pt;
+font-family: courier, monospace;
+font-size: 90%;
+overflow:auto;
 }
 
 img {
